adding pictures for getting started page

--- a/src/app/tutorials/tutorials.component.html
+++ b/src/app/tutorials/tutorials.component.html
@@ -52,7 +52,7 @@
       <div class="card">
         <div class="text-container">
           <br><br>
-          [Insert screenshot of offer box]
+          <img src="/../../../../assets/images/offerbox.png" />
           <br><br>
           Here you create your offer. Enter the percentage of the profits you want take, the amount of money you want to invest, and the date you want to end the investment period. If your offer is accepted, the money will be taken from your account and, after the time period ends, your remaining money will be sent back to you along with your cut of the profits!
           <br><br>
@@ -109,7 +109,8 @@
         <div class="text-container">
           <br><br>
           Click the 'new project' button on the dashboard to get to the editor screen.
-          <br>[picture]
+          <br>
+          <img src="../../../../assets/images/projects.png" style="width: 50vw"/>
           <br>
           Here you can click 'new file' to start a new file and write your python code. The 'run' button attempts to compile the algorithm and puts output in the terminal beneath. When finished, click 'save'. Then you can click 'run backtests' and see how well your algorithm performs!
         </div>
@@ -119,7 +120,8 @@
       <div class="card">
         <div class="text-container">
           <br><br>
-          [Insert screenshot of graph page with graphs labelled]
+          <img src="../../../../assets/images/leaderboard.png" style="width: 50vw"/>
+
           <br><br>
           If your algorithm does well, it may end up on the leaderboard! That is where potential investors can find you!
           <br><br>
@@ -143,7 +145,8 @@
         <div class="text-container">
           Open offers show up here:
           <br><br>
-          [Insert screenshot of inbox with an offer open and labelled]
+          <img src="../../../../assets/images/offerbox-label.png" />
+
           <br><br>
           You can accept it in which case the trading will begin. At the end of the time period, any profits will be split according to the split agreed upon and your cut will be credited to your account.
           <br><br>
