--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -36,7 +36,7 @@
           <td class="align-middle">{{datum.risk}}</td>
           <td class="align-middle">
             <button class="btn btn-success" data-toggle="modal" [attr.data-target]="'#' + datum._id" (click)="resetSentData()">Make offer</button>
-            <button class="btn btn-info"  routerLink="/graphs">Results</button>
+            <button class="btn btn-info"  [routerLink]="['../graphs', datum._id]">Results</button>
           </td>
 
           <div [attr.id]="datum._id" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
